--- a/vindex.html
+++ b/vindex.html
@@ -100,18 +100,18 @@
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">Data Structures using C, General Proficiency.</h2>
-          <img class="testimonial-image" src="indu_sahu.jpg" alt="clang-profile">
-          <em class="textwhite">Ms Indu Sahu, MCA, M.Phil(CS)</em>
+          <img class="testimonial-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThTY5IYa921SWtNvVPtkxIGkiSpWSq4MePkw&usqp=CAU" alt="clang-profile">
+          <em class="textwhite">Ms Jane, MCA, M.Phil(CS)</em>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">Mathematics II</h2>
-          <img class="testimonial-image" src="maths.jpg" alt="maths-profile">
-          <em class="textwhite">Ms Yogita Thareja, M.Tech</em>
+          <img class="testimonial-image" src="https://www.fife.ac.uk/media/3828/mathematics-png.jpg?anchor=center&mode=crop&width=1200&height=800&rnd=132155248940000000" alt="maths-profile">
+          <em class="textwhite">Ms Holmes, M.Tech</em>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">Digital Electronics</h2>
-          <img class="testimonial-image" src="priyanka_gupta.jpeg" alt="de-profile">
-          <em class="textwhite">Ms Priyanka Gupta, MCA,NET</em>
+          <img class="testimonial-image" src="https://images.theconversation.com/files/191827/original/file-20171025-25516-g7rtyl.jpg?ixlib=rb-1.1.0&rect=0%2C70%2C7875%2C5667&q=45&auto=format&w=926&fit=clip" alt="de-profile">
+          <em class="textwhite">Ms Edward, MCA,NET</em>
         </div>
         <!-- <div class="carousel-item container-fluid">
           <h2 class="testimonial-text"></h2>
